--- a/yes.html
+++ b/yes.html
@@ -11,7 +11,7 @@
     <title>It's a yes</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./yes.css">
+    <link rel="stylesheet" href="./yess.css">
 </head>
 
 <body>
